--- a/xslt/current.nb.tranformations/readme
+++ b/xslt/current.nb.tranformations/readme
@@ -2,9 +2,10 @@
 = IMPORTANT
 =================
 
-This directory contains two transformation-files, which are largely identical:
+This directory contains three transformation-files, which are largely identical:
 - transform.nb.foto.v03-S.vit.xsl : transforms all Photographs of the Schwarzenbach-collection with a digitzed image that was actually shot by Annemarie Schwarzenbach.
-- transform.nb.foto.v03.vit.xsl : transforms all other picture-collections of HelveticArchives
+- transform.nb.foto.v03.vit.xsl : transforms all other photo-collections of HelveticArchives
+- transform.nb.bild.v03.vit.xsl : transforms all other picture-collections of HelveticArchives
 
 
 
